Fix spacing below data and table edit buttons

--- a/css/_tables.css
+++ b/css/_tables.css
@@ -45,6 +45,7 @@ div.dokuwiki div.editbutton_table form input.button {
 
 div.dokuwiki div.editbutton_table {
         margin-top: -1.2em;
+        margin-bottom: 1.2em;
 }
 
 
